--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -196,7 +196,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="projector.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive img-hover" src="./img/proj.jpg" alt="" width="304" height="236">
                 </a>
             </div>
             <div class="col-md-5">
